<resources>
    <string name="app_name">LEADERBOARD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank_fragment_1">Blank Fragment 1</string>
    <string name="minny_minny">Minny Minny</string>
    <string name="my_country_name">My Country Name</string>
    <string name="g">G</string>
    <string name="my_header">My Header</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="todo">TODO</string>
    <string name="project_submission">Project Submission</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB(link)</string>
    <string name="submit">Submit</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="signin" >Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="submission_not_successful">Submission Not Successful</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="submission_successful">Submission Successful</string>
</resources>
