<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SkillsFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skillsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/errorSkillsImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical"
        android:visibility="gone"
        android:src="@drawable/ic_signal_wifi_off_black_24dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/errorSkillsTextView"
        android:text="@string/no_internet_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/restartSkillsButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:text="@string/try_again"
        android:layout_gravity="center"/>

</FrameLayout>