<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SubmissionActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backToMainActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/gads_app_bar_image" />

    </LinearLayout>

    <TextView
        android:id="@+id/submitHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/project_submission"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="#e99c43"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.622"
        tools:layout_editor_absoluteX="6dp" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/gradient"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/submitHeaderTextView"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="128dp" />


    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_background"
        android:gravity="start"
        android:hint="@string/first_name"
        android:padding="6dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_weight="0.45"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteX="-1dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/secondNameEditText"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_background"
        android:gravity="center_horizontal"
        android:hint="@string/second_name"
        android:padding="6dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_weight="0.45"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/firstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        tools:ignore="RtlCompat"
        android:autofillHints="" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/email_address"
        android:padding="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@+id/secondNameEditText"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="293dp" />


    <EditText
        android:id="@+id/projectEditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/project_on_github_link"
        android:layout_marginTop="65dp"
        android:padding="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="371dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/submitDetailsButton"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@drawable/image_button_background"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>